objects/Onboarding_Slide__mdt.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multimode_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multimode Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Resource__c</fullName>
        <label>Static Resource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Title__c</fullName>
        <label>Sub Title</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Onboarding Slide</label>
    <listViews>
        <fullName>HCP_Delegate_Slides</fullName>
        <columns>MasterLabel</columns>
        <columns>Title__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Body__c</columns>
        <columns>Static_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Static_Resource__c</field>
            <operation>contains</operation>
            <value>os_hcpdelegateslide</value>
        </filters>
        <label>HCP Delegate Slides</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HCP_Slides</fullName>
        <columns>MasterLabel</columns>
        <columns>Title__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Body__c</columns>
        <columns>Static_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Static_Resource__c</field>
            <operation>contains</operation>
            <value>os_hcpslide</value>
        </filters>
        <label>HCP Slides</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PI_Delegate_Slides</fullName>
        <columns>MasterLabel</columns>
        <columns>Title__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Body__c</columns>
        <columns>Static_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Static_Resource__c</field>
            <operation>contains</operation>
            <value>os_pidelegateslide</value>
        </filters>
        <label>PI Delegate Slides</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PI_Slides</fullName>
        <columns>MasterLabel</columns>
        <columns>Title__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Body__c</columns>
        <columns>Static_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Static_Resource__c</field>
            <operation>contains</operation>
            <value>os_pislide</value>
        </filters>
        <label>PI Slides</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Participant_Slides</fullName>
        <columns>MasterLabel</columns>
        <columns>Title__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Body__c</columns>
        <columns>Static_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Static_Resource__c</field>
            <operation>contains</operation>
            <value>os_participantslide</value>
        </filters>
        <label>Participant Slides</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Onboarding Slides</pluralLabel>
</CustomObject>